--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter");
 .App {
   text-align: center;
   font-family: "Inter", sans-serif;
@@ -28,7 +29,7 @@ html {
 
 ::-webkit-scrollbar-thumb {
   background: var(--primary-green);
-  border-radius: 6px;  
+  border-radius: 6px;
 }
 
 body,
@@ -116,7 +117,7 @@ body,
   --bgrnd-green: #1b5c45;
   --accent-green: #74c4a8;
   --base-gray: rgb(31, 31, 31);
-  --base-gray2: rgb(25,25,25);
+  --base-gray2: rgb(25, 25, 25);
   --mid-gray: rgb(40, 40, 40);
   --mid-gray2: rgb(45, 45, 45);
   --top-gray: rgb(54, 54, 54);
@@ -317,7 +318,7 @@ body,
   position: relative;
 }
 .form-item input:hover {
-  top:-2px;
+  top: -2px;
 }
 .form-group {
   display: flex;
@@ -338,8 +339,9 @@ body,
   padding: 0px 10px;
   transition: ease 0.2s;
 }
-.auth-input:focus, .auth-input:active {
-  border:1px solid var(--primary-green);
+.auth-input:focus,
+.auth-input:active {
+  border: 1px solid var(--primary-green);
 }
 
 .auth-label {
@@ -577,7 +579,6 @@ body,
   outline: solid 1px var(--primary-green);
 }
 
-
 .picker-compact {
   position: absolute;
   right: 100%;
@@ -598,12 +599,12 @@ body,
   justify-content: center;
   align-items: center;
 }
-.fa-sml{
+.fa-sml {
   font-size: 1rem;
   text-align: center;
 }
 
-.m-btn{
+.m-btn {
   display: flex;
   position: relative;
   border: solid 2px var(--primary-green);
@@ -611,19 +612,18 @@ body,
   border-radius: 5px;
   justify-content: center;
   align-items: center;
-  
 }
-.m-btn:hover{
-background-color: var(--primary-green);
-cursor: pointer;
-box-shadow: 0px 1px 2px rgb(0,0,0,0.5);
+.m-btn:hover {
+  background-color: var(--primary-green);
+  cursor: pointer;
+  box-shadow: 0px 1px 2px rgb(0, 0, 0, 0.5);
 }
 
-.m-btn-sml{
+.m-btn-sml {
   width: 38px;
   height: 20px;
 }
-.m-btn-lrg{
+.m-btn-lrg {
   width: 206px;
   height: 25px;
 }
@@ -675,7 +675,7 @@ box-shadow: 0px 1px 2px rgb(0,0,0,0.5);
   font-weight: 300;
   position: relative;
   /* background-color: rgb(0,0,0,0.5); */
-  padding: 2px 12px 2px 0px ;
+  padding: 2px 12px 2px 0px;
   border-radius: 5px;
 }
 .modal-group {
@@ -698,11 +698,10 @@ box-shadow: 0px 1px 2px rgb(0,0,0,0.5);
 }
 
 .modal-item {
-display: flex;
-align-items: center;
-padding: 0px 6px 0px 0px;
+  display: flex;
+  align-items: center;
+  padding: 0px 6px 0px 0px;
 }
-
 
 .nested-modal-background {
   position: fixed;
@@ -734,7 +733,7 @@ padding: 0px 6px 0px 0px;
   font-family: inherit;
   font-size: 1rem;
   font-weight: 300;
-  border: 2px solid rgb(31,31,31);
+  border: 2px solid rgb(31, 31, 31);
   border-radius: 5px;
   padding: 2px 2px 2px 2px;
   height: 20px;
@@ -765,12 +764,10 @@ padding: 0px 6px 0px 0px;
   border-left: 10px solid white;
   z-index: 1010;
 }
-.compact-picker{
-background-color: white;
-border: transparent;
+.compact-picker {
+  background-color: white;
+  border: transparent;
 }
-
-
 
 /* -------------------------- */
 
@@ -784,21 +781,21 @@ border: transparent;
   background-repeat: no-repeat;
 }
 
-.landing-section{
-display: flex;
-flex-direction: row;
-align-items: center;
-justify-content: center;
+.landing-section {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
 }
 
-.landing-section1{
+.landing-section1 {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-evenly;
   padding: 180px 30px 30px 30px;
 }
-.landing-section2{
+.landing-section2 {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -807,7 +804,7 @@ justify-content: center;
   margin-top: 320px;
 }
 
-.landing-section4{
+.landing-section4 {
   display: flex;
   flex-direction: column;
   padding: 120px 0px 60px 0px;
@@ -815,59 +812,58 @@ justify-content: center;
   align-items: center;
 }
 
-
 @media (max-width: 1024px) {
-  .landing-section{
+  .landing-section {
     flex-direction: column;
   }
 }
 
-.landing-element{
+.landing-element {
   color: white;
 }
 
-.landing-item{
-color: white;
-font-family: "Inter", sans-serif;
-font-weight: 300;
-font-size:  2rem;
+.landing-item {
+  color: white;
+  font-family: "Inter", sans-serif;
+  font-weight: 300;
+  font-size: 2rem;
 }
-.landing-taskpanel-header-pos{
+.landing-taskpanel-header-pos {
   position: relative;
   transform: translateX(-200px) translateY(-150px);
 }
 .landing-item-F {
-color: var(--primary-green);
-font-family: "Inter", sans-serif;
-font-weight: 400;
+  color: var(--primary-green);
+  font-family: "Inter", sans-serif;
+  font-weight: 400;
 }
 .landing-item-T {
-font-family: "Inter", sans-serif;
-font-weight: 400;
-transform: translateX(150px);
+  font-family: "Inter", sans-serif;
+  font-weight: 400;
+  transform: translateX(150px);
 }
-.landing-item-taskpanel-text{
+.landing-item-taskpanel-text {
   text-align: left;
   padding: 50px 0px 0px 150px;
   width: 350px;
   font-weight: 300;
   font-size: 1.75rem;
-  color: rgb(112,112,112);
+  color: rgb(112, 112, 112);
 }
-.landing-logo{
+.landing-logo {
   width: 400px;
   height: 400px;
   cursor: pointer;
 }
-.landing-call2action{
+.landing-call2action {
   font-family: "Inter", sans-serif;
   font-size: 32px;
   margin: 200px 0px 0px 0px;
 }
-.landing-btn-signup{
+.landing-btn-signup {
   margin: 120px 0px 0px 0px;
 }
-.landing-tasks-image{
+.landing-tasks-image {
   width: 500px;
   height: 400px;
   position: relative;
@@ -880,20 +876,21 @@ transform: translateX(150px);
   justify-content: center;
   align-items: center;
 }
-.roadmap-item-R{
+.roadmap-item-R {
   color: var(--primary-green);
-  font-family: "Inter", sans-serif; 
+  font-family: "Inter", sans-serif;
   font-weight: 400;
 }
-.roadmap-item-M{
+.roadmap-item-M {
   color: white;
   font-family: "Inter", sans-serif;
   font-weight: 400;
 }
-.upper-roadmap-text, .lower-roadmap-text{
+.upper-roadmap-text,
+.lower-roadmap-text {
   color: white;
 }
-.landing-timeline-image{
+.landing-timeline-image {
   display: flex;
   position: relative;
   width: 100%;
@@ -1077,7 +1074,7 @@ transform: translateX(150px);
 
 /* Main Styling */
 
-.bug-button{
+.bug-button {
   position: fixed;
   z-index: 10000;
   color: white;
@@ -1117,7 +1114,7 @@ transform: translateX(150px);
   margin: 0.5rem 0rem 1rem 0rem;
 }
 
-.right{
+.right {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -1168,21 +1165,47 @@ color: var(--button);
 cursor: pointer;
 } */
 
-.add-task-btn {
-  position: relative;
-  background-color: transparent;
-  border: none;
-  color: white;
-  font-size: 14px;
-  padding: 10px 2px 10px 2px;
-  text-align: center;
+.add-task-buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 0px 0px 0px 0px;
+  margin-top: 1rem;
 }
 
-.add-task-angle {
-  /* padding: 10px 2px 10px 2px; */
-  transform: translateY(2px);
+.task-editor-area {
+  display: flex;
+  justify-content: center;
+}
+
+.add-task-buttons button {
+  border-radius: 3px;
   color: white;
   font-size: 14px;
+  font-weight: 300;
+  padding: 5px 10px 5px 10px;
+  margin: 0px 5px 0px 5px;
+  cursor: pointer;
+  outline: none;
+  border: none;
+  background-color: var(--primary-green);
+  cursor: pointer;
+  transition: 0.2s ease-in-out;
+}
+
+.add-task-buttons .cancel {
+  border: 1px solid var(--dark-orange);
+  background-color: var(--mid-gray);
+}
+
+.add-task-buttons button:hover {
+  background-color: var(--accent1);
+}
+
+.add-task-buttons .cancel:hover {
+  background-color: var(--dark-orange);
+  color: white;
 }
 
 .task-editor-area {
@@ -1192,10 +1215,18 @@ cursor: pointer;
 .add-task-container {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
-  margin: 0px 0px 0px 0px;
+  padding: 0px 0px 0px 0px;
+  margin-top: 1rem;
+  text-align: start;
 }
+.add-task-container h3 {
+  color: white;
+  font-size: 1.1rem;
+  font-weight: 400;
+}
+
 .add-task-submit {
   border: none;
   color: white;
@@ -1205,13 +1236,23 @@ cursor: pointer;
 }
 
 .add-task-container textarea {
-  border: none;
   outline: none;
   resize: none;
-  width: 100%;
+  width: 60%;
   height: 100%;
   font-size: 14px;
-  padding: 10px 2px 10px 2px;
+  padding: 20px 10px;
+  margin: 5px 0;
+  background-color: var(--mid-gray);
+  color: white;
+  border-radius: 5px;
+  border: 1px solid transparent;
+  transition: 0.3s ease-in-out;
+}
+
+.add-task-container textarea:focus,
+.add-task-container textarea:active {
+  border: 1px solid white;
 }
 
 .add-task-title {
@@ -1220,6 +1261,7 @@ cursor: pointer;
   justify-content: flex-start;
   align-items: center;
   margin: 0px 0px 0px 0px;
+  padding: 10px 10px;
 }
 .add-task-details {
   display: flex;
@@ -1446,7 +1488,6 @@ cursor: pointer;
   cursor: pointer;
 }
 
-
 /* TimeBlock section POST Kanishq */
 
 .table-blockz {
@@ -1455,13 +1496,17 @@ cursor: pointer;
   width: 68rem;
 }
 
-.table-blockz, .table-data, .table-header, .time-cell {
+.table-blockz,
+.table-data,
+.table-header,
+.time-cell {
   border: 1px solid var(--top-gray2);
   color: var(--text-gray1);
   border-collapse: collapse;
 }
 
-.table-data, .table-header {
+.table-data,
+.table-header {
   width: calc(100% / 7);
 }
 
@@ -1517,7 +1562,7 @@ cursor: pointer;
   justify-content: center;
   color: var(--text-gray1);
 }
-.increment-cell:hover{
+.increment-cell:hover {
   color: var(--primary-green);
 }
 
@@ -1579,7 +1624,8 @@ cursor: pointer;
   margin-bottom: 0.4rem;
 }
 
-.table-nav-btn, .table-nav-today {
+.table-nav-btn,
+.table-nav-today {
   outline: none;
   border: none;
   fill: white;
@@ -1600,7 +1646,8 @@ cursor: pointer;
   margin: 0.8rem 0 0;
 }
 
-.table-nav-btn:hover, .table-nav-today:hover {
+.table-nav-btn:hover,
+.table-nav-today:hover {
   background-color: var(--mid-gray2);
 }
 
@@ -1620,7 +1667,6 @@ cursor: pointer;
   background-color: var(--accent-green);
   border-radius: 5px;
 }
-
 
 .drag-listener {
   position: absolute;
