--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1171,6 +1171,39 @@ body,
   display: flex;
   margin-right: 1%;
 }
+
+/* Top Toolbar styling */
+.top-toolbar-container {
+  display: flex;
+  flex-direction: row;
+  background-color: var(--mid-gray);
+  border-top: solid 2px var(--top-gray);
+  padding: 5px;
+  align-items: center;
+}
+
+.top-toolbar-element {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  color: white;
+  padding: 5px 10px 5px 10px;
+}
+.top-toolbar-element:hover {
+  background-color: var(--base-gray);
+  border-radius: 8px;
+  color: var(--button);
+  cursor: pointer;
+  user-select: none;
+}
+.top-toolbar-item {
+  padding: 0px 3px 0px 3px;
+}
+
+.top-toolbar-sort {
+  display: flex;
+  margin-right: 1%;
+}
 /* .menu-sort:hover {
 justify-content: flex-start;
 background-color: var(--base-gray);
@@ -1633,7 +1666,7 @@ cursor: pointer;
 .table-navigator {
   display: flex;
   justify-content: center;
-  font-size: 1.3rem;
+  font-size: 1rem;
   align-items: center;
   margin-top: 0.4rem;
   margin-bottom: 0.4rem;
@@ -1657,7 +1690,7 @@ cursor: pointer;
 
 .current-week {
   color: white;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   margin: 0.8rem 0 0;
 }
 
@@ -1690,6 +1723,12 @@ cursor: pointer;
 .drag-listener-not {
   position: absolute;
   pointer-events: none;
+}
+
+@media all and (max-width: 1700px) {
+  .metrics-table-shrink{
+    display: none; 
+  }
 }
 
 .metrics-table-container{
