--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -373,6 +373,7 @@ body,
   width: 3rem;
   height: 3rem;
   cursor: pointer;
+  margin-right: 1rem;
 }
 
 .navbar-start {
@@ -387,7 +388,7 @@ body,
   box-shadow: 0px 0.5px 0.5px rgba(0, 0, 0, 0.5);
   z-index: 3;
   transition: all 0.7s ease-in;
-  padding: 10px 30px;
+  padding: 10px 10px;
 }
 .scrolled {
   position: fixed;
@@ -898,7 +899,7 @@ body,
 /* Side Bar styling */
 .left-sidebar-sm {
   position: relative;
-  width: 5%;
+  width: 4rem;
   min-height: 100vh;
   left: 0px;
   background-color: var(--mid-gray);
@@ -1127,7 +1128,7 @@ body,
   flex-direction: column;
   margin: 0.5rem 0rem 1rem 0rem;
 }
-.toolbar-container {
+.editable-cell-container {
   display: flex;
   flex-direction: row;
   background-color: var(--mid-gray);
@@ -1160,7 +1161,7 @@ body,
 
 .toolbar-item-title{
   position: absolute;
-  left: 6rem;
+  left: 4rem;
   font-size: 1rem;
   font-weight: 300;
   transition:  400ms ease-in-out;
