--- a/frontend/src/AccountSetting.css
+++ b/frontend/src/AccountSetting.css
@@ -2,21 +2,76 @@
     --midnight-layer1: rgb(13, 15, 28);
     --midnight-layer2: rgb(28, 30, 41);
     --midnight-layer3: rgb(82, 85, 92);
+    --primary-green: #34b487;
 }
 
-.wrapper {
+.account-page{
+  height: 100vh;
+  background-color: var(--midnight-layer2);
+}
+.account-grid-wrapper {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 10px;
-    grid-auto-rows: minmax(100px, auto);
+    gap: 2.5rem;
+    margin-top: auto;
+    margin-bottom: auto;
+    justify-content: center;
+    align-content: center;
   }
 
-  .account-settings-nav{
-    grid-column: 3;
-    grid-row: 3;
+  .account-grid-left{
+    display: flex;
+    grid-column: 1;
+    grid-row: 1;
+    justify-content: center;
+    margin-top: 8rem;
+    margin-bottom: auto;
   }
 
-  .account-setting-information{
-    grid-column: 3;
-    grid-row: 3;
+  .account-grid-right{
+    display: flex;
+    grid-column: 2;
+    grid-row: 1;
+    justify-content: center;
+    align-items: center;
+    margin-top: 8rem;
+    margin-bottom: auto;
+  }
+
+  .account-nav-container{
+    width: 19rem;
+    height: 36rem;
+    background-color: var(--midnight-layer1);
+    border-radius: .8rem;
+    box-shadow: 0 3px 5px rgb(0 0 0 / .8);
+    color: white;
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+  }
+
+  .account-information-container{
+    width: 30rem;
+    height: 36rem;
+    background-color: var(--midnight-layer1);
+    border-radius: .8rem;
+    box-shadow: 0 3px 5px rgb(0 0 0 / .8);
+    color: white;
+
+  }
+
+  .account-nav-header{
+    font-size: 1.25rem;
+    font-weight: 400;
+    margin: .8rem auto;
+  }
+  .account-nav-element{
+    font-size: 1.00rem;
+    font-weight: 300;
+    cursor: pointer;
+    margin: 1.5rem 0rem 1.5rem 0rem;
+    padding: .15rem 0 .15rem 1rem;
+    border-left: solid 3px transparent;
+  }
+  .account-nav-element:hover {
+    border-left: solid 3px var(--primary-green);
   }
