--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1124,7 +1124,7 @@ body,
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin: 0.5rem 0rem 1rem 6rem;
+  margin: 0.5rem 0rem 1rem 0rem;
 }
 
 .left {
@@ -1526,6 +1526,7 @@ cursor: pointer;
   margin-top: 1rem;
   table-layout: fixed;
   width: 68rem;
+  box-shadow: 0px 3px 6px rgb(0, 0, 0, 0.8);
 }
 
 .table-blockz,
@@ -1726,8 +1727,8 @@ cursor: pointer;
   position: fixed;
   background-color: var(--mid-gray);
   width: 32rem;
-  height: 20.5rem;
-  box-shadow: 3px 3px 6px rgb(0, 0, 0, 0.5);
+  height: 21.5rem;
+  box-shadow: 0px 3px 6px rgb(0, 0, 0, 0.5);
   border-radius: 10px;
   margin-top: 6.5rem;
   right: 2rem;
@@ -1779,16 +1780,20 @@ cursor: pointer;
   align-items: center;
   margin-top: 1rem;
   margin-bottom: 1rem;
+  padding-top: .5rem;
+  padding-bottom: .5rem;
   max-height: 15rem;
   overflow-y: scroll;
 }
 .metrics-data-table{
   /* border: solid 2px var(--text-gray1); */
+  position: relative;
   border-radius: 10px;
   color: white;
   font-family: "Inter", sans-serif;
   font-weight: 300;
   padding-bottom: 1rem;
+  max-height: 15rem;
 }
 
 .metrics-data-tr{
@@ -1797,6 +1802,18 @@ cursor: pointer;
   padding: .3rem .5rem;
   height: 2rem;
 }
+
+.piechart-container{
+  position: fixed;
+  background-color: var(--mid-gray);
+  width: 32rem;
+  height: 21.5rem;
+  box-shadow: 0px 3px 6px rgb(0, 0, 0, 0.5);
+  border-radius: 10px;
+  margin-top: 32.5rem;
+  right: 2rem;
+}
+
 /* TimeBlock section PRE Kanishq */
 
 /* 
