--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -91,7 +91,7 @@ body,
   --light-orange: #fb8b00;
   --mid-orange: #fa7711;
   --dark-orange: #f34508;
-  --danger: #cc0000;
+  --danger: #b31f1f;
 
   --highlight_color: #61dafb;
   --accent1: #2e8b57;
@@ -1175,6 +1175,12 @@ body,
   padding: 0.2rem;
   color: white;
   cursor: pointer;
+  border-radius: 4px;
+  transition: 0.2s ease-in-out;
+}
+
+.new-task-button:hover {
+  background-color: rgba(255, 255, 255, 0.1);
 }
 
 .toolbar-item {
@@ -1189,314 +1195,9 @@ color: var(--button);
 cursor: pointer;
 } */
 
-.add-task-buttons {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  padding: 0px 0px 0px 0px;
-  margin-top: 1rem;
-}
-
-.task-editor-area {
-  display: flex;
-  justify-content: center;
-}
-
-
-.add-task-buttons button {
-  border-radius: 3px;
-  color: white;
-  font-size: 14px;
-  font-weight: 300;
-  padding: 5px 10px 5px 10px;
-  margin: 0px 5px 0px 5px;
-  cursor: pointer;
-  outline: none;
-  border: none;
-  background-color: var(--primary-green);
-  cursor: pointer;
-  transition: 0.2s ease-in-out;
-}
-
-.add-task-buttons .cancel {
-  border: 1px solid var(--danger);
-  background-color: var(--mid-gray);
-}
-
-.add-task-buttons button:hover {
-  background-color: var(--accent1);
-}
-
-.add-task-buttons .cancel:hover {
-  background-color: var(--danger);
-  color: white;
-}
-
-.task-editor-area {
-  margin: 20px 10px 10px 10px;
-  padding: 10px 5px 5px 5px;
-}
-.add-task-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 0px 0px 0px 0px;
-  margin: 1rem auto 0;
-  text-align: start;
-}
-.add-task-container h3 {
-  color: white;
-  font-size: 1.1rem;
-  font-weight: 400;
-}
-
-.add-task-submit {
-  border: none;
-  color: white;
-  font-size: 14px;
-  padding: 10px 2px 10px 2px;
-  text-align: center;
-}
-
-.add-task-container textarea {
-  outline: none;
-  resize: none;
-  width: 60%;
-  height: 20%;
-  font-size: 14px;
-  padding: 20px 10px;
-  margin: 5px 0;
-  background-color: var(--mid-gray);
-  color: white;
-  border-radius: 5px;
-  border: 1px solid transparent;
-  transition: 0.3s ease-in-out;
-}
-
-.add-task-container textarea:focus,
-.add-task-container textarea:active {
-  border: 1px solid white;
-}
-
-.add-task-title {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: center;
-  margin: 0px 0px 0px 0px;
-  padding: 10px 10px;
-}
-.add-task-details {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: center;
-  margin: 0px 0px 0px 0px;
-}
 
 .hover:hover {
   color: var(--primary-green);
-}
-
-/* Task Styling */
-.fade-out {
-  width: 5px;
-  opacity: 0.3;
-  background: rgba(31, 31, 31, 0.3);
-}
-
-.task-edit {
-  color: white;
-}
-.task-edit:hover {
-  color: var(--accent1);
-}
-/* Task List Styling */
-
-.task-list {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-
-.task-shell {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 0rem 0.5rem 0rem 0.5rem;
-}
-
-.task-container {
-  display: flex;
-  margin-top: 1.5rem;
-  margin-bottom: 1.5rem;
-  position: relative;
-  width: 75%;
-  justify-content: center;
-  align-items: center;
-}
-
-.task-item {
-  display: flex;
-  flex-direction: column;
-  padding: 6px 12px 6px 6px;
-  border: solid 0.5px var(--mid-gray);
-  border-radius: 6px;
-  box-shadow: var(--task-shadow);
-  color: white;
-  min-height: 50px;
-  max-height: 500px;
-  min-width: 25%px;
-  width: 95%;
-  background-color: var(--mid-gray2);
-}
-.task-element {
-  margin: 0px 0px 0px 10px;
-  align-self: flex-start;
-  text-align: left;
-}
-.task-header {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-.task-title {
-  margin-right: auto;
-  overflow-x: hidden;
-  cursor: pointer;
-}
-.task-body {
-  display: flex;
-  flex-direction: column;
-}
-.task-details {
-  white-space: pre-wrap;
-  padding: 4px 0px 4px 16px;
-}
-.task-lastrow {
-  display: flex;
-  flex-direction: row;
-}
-.task-duedate,
-.task-reminder {
-  display: flex;
-  flex-direction: row;
-}
-.duedate {
-  margin: 5px 10px 5px 10px;
-  padding: 3px 5px 3px 5px;
-  border: solid 1px var(--top-gray2);
-  background-color: var(--top-gray);
-  border-radius: 5px;
-  cursor: pointer;
-  color: var(--primary-green);
-}
-.reminder {
-  margin: 5px 10px 5px 10px;
-  padding: 3px 5px 3px 5px;
-  border: solid 1px var(--top-gray2);
-  background-color: var(--top-gray);
-  border-radius: 5px;
-  cursor: pointer;
-  color: var(--light-orange);
-}
-
-.duedate:hover,
-.reminder:hover {
-  border: solid 1px var(--mid-gray);
-  background-color: var(--top-gray2);
-  color: rgb(255, 255, 255, 0.8);
-}
-
-.sidebar-divider {
-  margin: 0.5rem 0.2rem;
-  color: var(--text-gray1);
-  outline-color: var(--text-gray1);
-  border-color: var(--text-gray1);
-}
-
-.task-grip-invisible {
-  position: absolute;
-  left: 5px;
-  top: 9px;
-  z-index: -1;
-  color: transparent;
-}
-
-.task-grip {
-  position: absolute;
-  left: -2px;
-  top: 9px;
-  color: rgb(255, 255, 255, 0.5);
-  transition: 0.1s ease-in-out;
-}
-
-.task-grip:hover {
-  position: absolute;
-  color: var(--accent-green);
-}
-
-.task-icons {
-  margin: 4px;
-  font-size: 1rem;
-  display: flex;
-  white-space: nowrap;
-}
-
-/* Need to fix the translation work so that we don't get */
-/* The flicker effect on all elements. */
-
-/* .invisible-icons {
-    position: relative;
-    z-index: -10;
-    transition: 1.5s ease-in-out;
-  }
-  
-  .task-icons-hover {
-    position: relative;
-    z-index: 1;
-    transition: 1.5s ease-in-out;
-  } */
-
-.task-icon {
-  margin-left: 4px;
-  margin-right: 4px;
-  font-size: 1rem;
-}
-
-.task-buckets {
-  display: flex;
-  flex-direction: row;
-}
-
-.task-bucket {
-  margin: 5px 10px 5px 10px;
-  padding: 3px 5px 3px 5px;
-  border: solid 1px var(--top-gray2);
-  background-color: var(--top-gray);
-  border-radius: 5px;
-  cursor: pointer;
-  color: rgb(255, 255, 255, 0.5);
-}
-.task-bucket:hover {
-  border: solid 1px var(--mid-gray);
-  background-color: var(--top-gray2);
-  color: rgb(255, 255, 255, 0.8);
-}
-.task-delete {
-  color: white;
-}
-.task-delete:hover {
-  color: var(--accent1);
-}
-.task-complete {
-  font-size: min(1rem);
-}
-.task-complete:hover {
-  cursor: pointer;
-  user-select: none;
 }
 
 /* Dropdown Styling */
