--- a/frontend/src/Tasks.css
+++ b/frontend/src/Tasks.css
@@ -237,10 +237,17 @@
     color: white;
     align-items: flex-start;
     margin: auto;
+    width: 35%;
+}
+
+.add-task-form {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
 }
 
 .add-task-container h3 {
-    margin: 0.4rem 0;
+    margin: 0.6rem 0;
     font-weight: 500;
     font-size: 1.2rem;
 }
@@ -249,7 +256,7 @@
   font-size: 1.3rem;
 }
 
-.add-task-container textarea {
+.add-task-container textarea, .add-task-container input {
     background-color: var(--mid-gray2);
     padding: 0.8rem;
     resize: none;
@@ -259,6 +266,14 @@
     font-family: 'Inter';
     color: var(--text-gray2);
     font-size: 0.9rem;
+}
+
+.add-task-container textarea {
+  width: 100%;
+}
+
+.add-task-container input {
+  width: 80%;
 }
 
 .add-task-buttons button {
