--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1275,6 +1275,7 @@ cursor: pointer;
   border-collapse: collapse;
   user-select: none;
   height: 100%;
+  text-align: center;
 }
 
 .table-data,
@@ -1362,6 +1363,8 @@ cursor: pointer;
   justify-content: center;
   align-items: flex-start;
   color: white;
+  box-shadow: inset 0px 0px 3px rgb(0, 0, 0, 0.5);
+  text-align: center;
 }
 
 .readonly-cell {
