--- a/frontend/src/ToDo.css
+++ b/frontend/src/ToDo.css
@@ -3,6 +3,11 @@
 .options-container{
     display: flex;
     flex-direction: column;
+    align-items: center;
+}
+.options-container-row{
+    display: flex;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
 }
@@ -10,6 +15,10 @@
     width: 6.5rem;
     outline: none;
     margin: 0.5rem 0.5rem;
+    background-color: var(--base-gray2);
+    border: none;
+    color: rgb(255,255,255,0.8);
+    border-radius: 0.2rem;
 }
 .options-textarea{
     width: 15.5rem;
@@ -30,14 +39,19 @@
     display: flex;
     flex-direction: row;
     background-color: var(--mid-gray2);
-    border-radius: 5px;
+    border-radius: 0.5rem;
     margin: 1rem 0.1rem 0.5rem 0.1rem;
     box-shadow: 0px 3px 6px rgb(0,0,0, 0.5);
-
+    padding: 0.5rem;
 }
 
 .description-container{
     display: flex;
     flex-direction: column;
     margin: 0.5rem 0rem;
+}
+.option-btn{
+    max-width: 4.5rem;
+    margin: 1rem 1rem 0rem 1rem;
+    padding: .75rem;
 }
